fix(dates filter): use Select wrappedClassName prop instead of a weird CSS trick

--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -73,9 +73,6 @@ select-date-height-small = 2.75rem
         height 100%
         width 100%
 
-        > span:not([class])
-            flex-grow 1
-
         select
             width 100%
             margin-right -1.3rem
@@ -105,6 +102,9 @@ select-date-height-small = 2.75rem
 
     .SelectDates__Select
         color inherit
+
+    .SelectDates__SelectRoot
+        flex-grow 1
 
 .SelectDates__Button
     cursor pointer
